--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,9 +13,9 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Cadastro de Adicionais" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_produto_adicional"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Amarração de Produto x Adicional" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
