--- a/app/src/main/res/layout/content_produto_adicional.xml
+++ b/app/src/main/res/layout/content_produto_adicional.xml
@@ -12,20 +12,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/etProduto"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginBottom="@dimen/marginBottom"/>
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/marginBottom"
             android:id="@+id/spProduto"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/tvAdicional"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginBottom="@dimen/marginBottom"/>
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/spAdicional"
+            android:layout_marginBottom="@dimen/marginBottom"
             ></Spinner>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/tvDefault"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginBottom="@dimen/marginBottom"/>
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/tgAtivo"/>
+            android:id="@+id/tgAtivo"
+            android:layout_marginBottom="@dimen/marginBottom"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
